# OpenNPD

src/: CMakeLists.txt
src/cmakes/: FindOPENCV.cmake
src/npd/: CMakeLists.txt
src/npd_train/: CMakeLists.txt
src/test/: CMakeLists.txt
